# tqs-2026

./: .gitignore  LICENSE  README.md  pyproject.toml  relatorio.md  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
capitulos/: 01-visao-geral.md  02-preparando-ambiente.md  03-rodando-aplicacao.md  04-testes-automatizados.md  05-tdd-na-pratica.md  06-qualidade-de-codigo.md  07-ci-github-actions.md  08-deploy-automatizado.md  09-pull-requests.md  10-atividade-pratica.md  11-recursos-e-licenca.md
docs/: index.html  style.css  validators.js
src/: app.py  validators.py
src/templates/: index.html
tests/: test_app.py  test_validators.py
